# ros_motion_planning

.codemap/: application-shell.json  float-area-c9d5696b-32dc-48cb-853f-32edef36dc6d.json
src/core/common/: CMakeLists.txt
src/core/common/include/common/math/: math_helper.h
src/core/common/include/common/util/: log.h  visualizer.h
src/core/controller/controller/src/: controller.cpp
src/core/controller/dwa_controller/cfg/: DWAController.cfg
src/core/controller/dwa_controller/include/controller/: dwa.h  dwa_controller.h
src/core/controller/dwa_controller/src/: dwa.cpp  dwa_controller.cpp
src/plugins/rviz_plugins/spencer_tracking_rviz_plugin/src/visuals/: mesh_node.h
src/sim_env/: CMakeLists.txt  package.xml
src/sim_env/config/: amcl_params.yaml  move_base_params.yaml
src/sim_env/config/robots/turtlebot3_burger/: amcl_params_turtlebot3_burger.yaml  global_costmap_params_turtlebot3_burger.yaml  local_costmap_params_turtlebot3_burger.yaml
src/user_config/: map_layers_config.yaml  obstacles_config.yaml  pedestrian_config.yaml  user_config.yaml  user_config_multi.yaml
