<?xml version="1.0"?>
<package format="2">
  <name>sim_env</name>
  <version>0.0.1</version>
  <description>Simulation environment</description>
  <maintainer email="913982779@qq.com">Winter</maintainer>
  <maintainer email="guo.zhanyu@qq.com">ZhanyuGuo</maintainer>
  <license>BSD</license>
  <author email="913982779@qq.com">Winter</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rviz</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz</exec_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>yocs_cmd_vel_mux</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>

<!-- 用于定义一个 ROS 软件包（package）的清单文件（manifest） -->
<!-- 描述了软件包的名称、版本、功能、维护者以及它依赖的其他软件包 -->

<!-- 
effort_controllers 是ROS 控制框架（ros_control）中的一个控制器包，提供基于力/力矩（effort）的控制器，用于控制机器人的关节或执行器。
它通常用于物理仿真（如 Gazebo）或真实机器人中，通过向关节施加力或力矩来实现运动。

joint_state_controller 也是 ros_control 框架的一部分，专门用于发布机器人关节状态（joint states）。
它从硬件接口（或仿真环境）读取关节的当前位置、速度、力/力矩等信息，并通过 ROS 话题发布这些数据。

yocs_cmd_vel_mux（Yujin Open Control System Command Velocity Multiplexer）是一个 ROS 包
用于多路复用速度命令（geometry_msgs/Twist 消息）。它允许多个输入源（如遥控器、自主导航、键盘控制）发送速度指令，并根据优先级或逻辑选择最终发送给机器人的命令。 
-->